fix(header): backdrop opacity on mobile

--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -10,7 +10,8 @@
 
 body {
     font-family: 'Rubik', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: radial-gradient(circle at 100% 0, rgba(55, 29, 255, 0.388), rgba(55, 29, 255, 0.194) 300px, transparent 800px), 
+    background: linear-gradient(-125deg, transparent, #0e081d64, #56144f2e, transparent),
+                radial-gradient(circle at 100% 0, rgba(55, 29, 255, 0.388), rgba(55, 29, 255, 0.194) 300px, transparent 800px), 
                 linear-gradient(to bottom, #101011, #05051c);
     background-repeat: no-repeat;
     min-height: 100vh;
@@ -28,7 +29,7 @@ ul {
     list-style: none;
 }
 .section {
-    margin: 5rem 0;
+    margin: 6rem 0;
 }
 .blur-bg {
     backdrop-filter: blur(20px);
